--- a/src/Shared/Header/Header.css
+++ b/src/Shared/Header/Header.css
@@ -13,3 +13,9 @@
     font-size: 20px;
     margin-right: 15px;
 }
+.user-img img{
+    width: 40px;
+    height:40px;
+    border-radius:50%;
+    border:1px solid #f9461d;
+}
