--- a/src/Components/Home/Services/Services.css
+++ b/src/Components/Home/Services/Services.css
@@ -12,3 +12,16 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 14px;
 }
+
+@media only screen and (max-width:768px) {
+    .service{
+         grid-template-columns: repeat(2, 1fr);
+    }
+    }
+    
+@media only screen and (max-width:568px) {
+    .service{
+         grid-template-columns: repeat(1, 1fr);
+    }
+
+    }
